# bulkvis

./: .gitignore  README.md  env.yml  main.py  pyproject.toml
src/bulkvis/: _cli.py  main.py
src/bulkvis/utils/: readsignal.py
